# log

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  TODO.md
include/: log.hxx
include/log/: clang_formatter.hxx  console_target.hxx  default_formatter.hxx  fast_log_entry.hxx  file_target.hxx  log_entry.hxx  log_target.hxx  logger.hxx  network_target.hxx  severity_level.hxx  tag.hxx  utility.hxx
src/: clang_formatter.cxx  default_formatter.cxx  log_entry.cxx  logger.cxx  network_target.cxx  tag.cxx
